--- a/index.html
+++ b/index.html
@@ -16,4 +16,16 @@
 		HW0.html</a></td>
 		
 	</tr>
+	
+	<tr>
+		<td width="300">
+		<img border="1" src="HW1.gif" width="368" height="253"></td>
+		
+	</tr>
+	<tr>
+		<td width="300">
+		<p align="center">
+		<a href="HW1.html">HW1.html</a></td>
+		
+	</tr>
 </table>
