--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	<tr>
 		<td width="300">
 		<p align="center">
-		<a href="HW1.html">HW1.html</a></td>
+		<a href="https://wei-i23.github.io/GameProgrammingHW/HW1/HW1.html">HW1.html</a></td>
 		
 	</tr>
 </table>
