--- a/index.html
+++ b/index.html
@@ -6,21 +6,21 @@
 <table border="1" width="30%">
 	<tr>
 		<td width="300">
-		<img border="0" src="HW0.gif" width="368" height="253">
+		<img border="0" src="HW0.gif" width="410" height="253">
 		<p align="center">
 		<a href="https://wei-i23.github.io/GameProgrammingHW/HW0/HW0.html">
 		HW0.html</a></td>
 	
 		<td width="300">
-		<img border="1" src="HW1.gif" width="368" height="253">
+		<img border="1" src="HW1.gif" width="410" height="253">
 		
 		<p align="center">
 		<a href="https://wei-i23.github.io/GameProgrammingHW/HW1/HW1.html">HW1.html</a></td>
 		
 		<td width="300">
-		<img border="1" src="HW2.gif" width="368" height="253">
+		<img border="1" src="HW2.gif" width="410" height="253">
 		
 		<p align="center">
-		<a href="HW2.html">HW1.html</a></td>
+		<a href="https://wei-i23.github.io/GameProgrammingHW/HW2/HW2.html">HW2.html</a></td>
 	</tr>
 </table>
