--- a/index.html
+++ b/index.html
@@ -23,4 +23,11 @@
 		<p align="center">
 		<a href="https://wei-i23.github.io/GameProgrammingHW/HW2/HW2.html">HW2.html</a></td>
 	</tr>
+	<tr>
+		<td width="300">
+		<img border="1" src="HW3.gif" width="410" height="253">
+		
+		<p align="center">
+		<a href="https://wei-i23.github.io/GameProgrammingHW/HW2/HW2.html">HW3.html</a></td>
+	</tr>
 </table>
