--- a/HW3/HW3.html
+++ b/HW3/HW3.html
@@ -53,6 +53,11 @@ var T = 1;
 var clock = new THREE.Clock();
 var ts;
 
+var pos = new THREE.Vector3();
+var vel = new THREE.Vector3();
+var force = new THREE.Vector3();
+var power, angle;
+
 // three STATES: Walk, S2W, Stand
 ///// WALK////////////////////////
 
@@ -193,11 +198,16 @@ $('#toggle').click (
 	}
 );
 
+(function() {
+  Math.clamp = function(val,min,max){
+    return Math.min(Math.max(val,min),max);
+ }})();
+
 init();
 animate();
 
 function init() {
-
+	
 	scene = new THREE.Scene();
 
 	renderer = new THREE.WebGLRenderer();
@@ -213,6 +223,7 @@ function init() {
 	camera1 = new THREE.PerspectiveCamera(50, window.innerWidth / window.innerHeight, 1, 1000);
 	camera1.position.set(0,100,500);
 	let controls1 = new OrbitControls(camera1, renderer.domElement);
+	controls.enableKeys = false;
 	
 	document.body.appendChild(renderer.domElement);
 	
@@ -257,12 +268,17 @@ function init() {
 	leg_L.rotation.x = Math.PI/6;
 	leg_R.rotation.x = -Math.PI/6;
 	
+	scene.add(group);
+	group.position.y = 10;
+	group.rotation.y = Math.PI/2;
+	
+	window.addEventListener('resize', onWindowResize, false);
+	
 	state = 'Stand';
 	ts = clock.getElapsedTime();
 	
-	scene.add(group);
-	group.position.y = 10;
-	window.addEventListener('resize', onWindowResize, false);
+	power = 1.0;
+	angle = 0.0;
 	
 	//gyro camera
 	gyro = new Gyroscope();
@@ -550,6 +566,8 @@ function onWindowResize() {
 	camera.updateProjectionMatrix();
 	renderer.setSize(window.innerWidth, window.innerHeight);
 }
+
+
 function down(event){
 	ts = clock.getElapsedTime();
 	state = 'S2W';
@@ -560,14 +578,49 @@ function down(event){
 	
 } 
 
-function animate() {
-	requestAnimationFrame(animate);
-	render();
-  
-	
+//上下左右控制
+function update(dt){
 	keyboard.update();
 	
+	if(vel.length() > 0){
+		angle = 1.5*Math.PI + Math.atan2(vel.x,vel.z);
+	}
 	
+	if (keyboard.pressed("space"))  
+ 	   power = 0.1;
+	if (keyboard.pressed("up"))  
+		power *= 1.2;        
+	if (keyboard.pressed("down"))  
+		power /= 1.2;   
+		
+	power = Math.clamp (power, 0, 80.0);
+		
+	var angle_thrust = angle;
+	if (keyboard.pressed("left"))
+		angle_thrust += 0.3;
+	if (keyboard.pressed("right"))
+		angle_thrust -= 0.3;
+	
+	
+	// compute force
+	var thrust = new THREE.Vector3(1,0,0).multiplyScalar(power).applyAxisAngle (new THREE.Vector3(0,1,0), angle_thrust);
+	force.copy (thrust);
+	force.add(vel.clone().multiplyScalar(-2))
+
+	// eulers
+	vel.add(force.clone().multiplyScalar(dt));
+	pos.add(vel.clone().multiplyScalar(dt));
+}
+
+function animate() {
+	var dt = clock.getDelta();
+	update(dt);
+	
+	/*
+	//steve update
+	group.position.copy(pos);
+	group.rotation.y = angle;
+	*/
 	
 	if(keyboard.pressed('space')){		//move to walk
 		walk = true;
@@ -576,8 +629,24 @@ function animate() {
 	else if(keyboard.up('space')){	//move to stand
 		walk = false;
 		//state = 'S2W';
-		
 	}
+	
+	if(walk == true){
+		if(state = 'Walk'){
+			group.position.copy(pos);
+			group.rotation.y = angle;
+			group.position.y = 10;
+		}
+	}
+	else{
+		down();
+	}
+	
+	requestAnimationFrame(animate);
+	render();
+	
+	
+	/*
 	if(walk == true){
 		if(state = 'Walk'){ 
 			//路線
@@ -605,6 +674,7 @@ function animate() {
 		
 		down();
 	}
+	*/
 	
 	if(walk)
 		$('#state').text('walk');
