--- a/index.html
+++ b/index.html
@@ -29,5 +29,11 @@
 		
 		<p align="center">
 		<a href="https://wei-i23.github.io/GameProgrammingHW/HW3/HW3.html">HW3.html</a></td>
+		
+		<td width="300">
+		<img border="1" src="HW4.gif" width="410" height="253">
+		
+		<p align="center">
+		<a href="https://wei-i23.github.io/GameProgrammingHW/HW3/HW3.html">HW4.html</a></td>
 	</tr>
 </table>
