--- a/index.html
+++ b/index.html
@@ -35,5 +35,11 @@
 		
 		<p align="center">
 		<a href="https://wei-i23.github.io/GameProgrammingHW/HW4/HW4.html">HW4.html</a></td>
+		
+		<td width="300">
+		<img border="1" src="HW5.gif" width="410" height="253">
+		
+		<p align="center">
+		<a href="https://wei-i23.github.io/GameProgrammingHW/HW5/HW5.html">HW5.html</a></td>
 	</tr>
 </table>
