--- a/index.html
+++ b/index.html
@@ -42,4 +42,11 @@
 		<p align="center">
 		<a href="https://wei-i23.github.io/GameProgrammingHW/HW5/HW5.html">HW5.html</a></td>
 	</tr>
+	<tr>
+		<td width="300">
+		<img border="1" src="HW6.gif" width="410" height="253">
+		
+		<p align="center">
+		<a href="https://wei-i23.github.io/GameProgrammingHW/HW6/HW6.html">HW6.html</a></td>
+	</tr>
 </table>
